<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">باشگاه کتاب خوانی صامد</string>
    <string name="navigation_drawer_open">باز کردن پنل</string>
    <string name="navigation_drawer_close">بستن پنل</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">تنظیمات</string>

    <string name="cart">سبد خرید</string>
    <string name="gallery">گالری عکس</string>
    <string name="settings">تنظیمات</string>
    <string name="about">درباره ما</string>
    <string name="send"> ارسال نرم افزار به دوستان</string>
    <string name="nav_communicate">ارتباطات</string>
    <string name="login">ورود</string>
    <string name="register">عضویت در فروشگاه</string>
    <string name="showpassword">نمایش رمز عبور</string>
    <string name="address">نشانی</string>
    <string name="email">پست الکترونیک</string>
    <string name="phonenumber">تلفن همراه</string>
    <string name="password">رمزعبور</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده اید؟!</string>
    <string name="didnt_register_yet">ثبت نام نکرده ام!</string>
    <string name="welcometo_bookstore">ورود به فروشگاه</string>
    <string name="category">دسته بندی محصولات</string>
    <string name="offers">تخفیفات ویژه</string>
    <string name="products">محصولات</string>
    <string name="mostvisited">محصولات پر بازدید</string>
    <string name="numbers">تعداد :</string>
    <string name="price">قیمت محصول :</string>
    <string name="totalprice">قیمت کل محصول :</string>
    <string name="delete">حذف</string>
    <string name="login_register">عضویت / ورود</string>
    <string name="edit_information">ویرایش اطلاعات</string>
    <string name="exit_profile">خروج از حساب</string>
    <string name="favorite">علاقه مندی ها</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="only_in_samed">فقط در فروشگاه صامد</string>
    <string name="most_sold">محصولات پر فروش</string>
    <string name="lorem">Lorem ipsum dolor sit amet, cons maximus odio sed tiPraesent ac diam nibh. Praesent sit amet ante consectetur, fermentum odio a, varius odio. Ut maximus elementum mauris, eget pellentesque felis rhoncus et. Praesent congue neque in massa condimentum placerat. Nunc tristique varius elit sit amet commodo. Morbi sed venenatis</string>
    <string name="product_information">مشخصات محصول</string>
    <string name="comments">نظرات کاربران</string>
    <string name="add_to_shopcart">اضافه به سبد خرید</string>
    <string name="continue_reading">ادامه مطلب</string>
    <string name="author">نویسنده :</string>
    <string name="publisher">انتشارات :</string>
    <string name="add_to_favorite">افزودن به علاقه مندی ها</string>
    <string name="totallprice">قیمت کل محصول :</string>
    <string name="product_price">قیمت محصول :</string>
    <string name="number">تعداد :</string>
    <string name="group">دسته بندی</string>
    <string name="account">حساب کاربری</string>
    <string name="similar_products">محصولات مشابه</string>
    <string name="others_buy">دیگران خریده اند</string>
    <string name="get_image">دریافت عکس</string>
    <string name="positive_points">نقاط قوت کتاب</string>
    <string name="negative_point">نقاط ضعف</string>
    <string name="insert_comment">ثبت دیدگاه</string>
    <string name="fav_list">لیست علاقه مندی ها</string>
    <string name="recovery_password">بازیابی رمز عبور</string>
    <string name="please_enter_email">لطفا پست الکترونیک خود را وارد کنید</string>
    <string name="forget_password">کلمه عبور را فراموش کرده ام!</string>
    <string name="full_list">لیست کامل</string>
    <string name="phone_or_mobile">شماره موبایل یا ایمیل</string>
    <string name="change_pass_button">ایجاد کلمه عبور جدید</string>
    <string name="new_pass">رمز عبور جدید</string>
    <string name="double_pass">تکرار رمز عبور</string>
    <string name="myorders">سفارش های من</string>
    <string name="account_information">اطلاعات فردی</string>
    <string name="change_pass">تغییر کلمه عبور</string>
    <string name="status">وضعیت</string>
    <string name="myaddress">آدرس های من</string>
    <string name="addaddress">افزودن آدرس</string>
    <string name="current_pass">رمز عبور فعلی</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
