<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:background="@color/gray_light_for_bg_activity"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_second"
        android:id="@+id/tooolbar"/>

    <ScrollView
        android:layout_below="@id/tooolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_below="@id/tooolbar"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone_android_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:inputType="phone"
                android:maxLines="1"
                android:maxLength="11"
                android:id="@+id/ed_phone_register"
                android:drawableTint="@color/gray"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:hint="@string/phonenumber"
                tools:targetApi="m" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:inputType="textEmailAddress"
                android:id="@+id/ed_email_register"
                android:maxLines="1"
                android:maxLength="30"
                android:drawableTint="@color/gray"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email"
                tools:targetApi="m" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_open_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:gravity="end"
                android:inputType="numberPassword"
                android:id="@+id/ed_password_register"
                android:maxLines="1"
                android:maxLength="20"
                android:drawableTint="@color/gray"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                tools:targetApi="m" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_home_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:inputType="textMultiLine"
                android:id="@+id/ed_address_register"
                android:lines="3"
                android:maxLines="5"
                android:maxLength="500"
                android:drawableTint="@color/gray"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/address"
                tools:targetApi="m" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="start"
                android:id="@+id/chk_show_pass_register"
                android:layout_height="wrap_content"
                android:text="@string/showpassword"/>
        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card_Register"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/standard_elevation"
        android:layout_height="50dp"
        tools:targetApi="lollipop">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:gravity="center_vertical"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big" />
    </android.support.v7.widget.CardView>


</RelativeLayout>
