<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".Activities.LoginActivity"
    android:background="#fff">

    <include layout="@layout/toolbar_second"/>

    <RelativeLayout
        android:id="@+id/liner1"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir_medium"
            android:hint="@string/phone_or_mobile"
            android:gravity="right"
            android:paddingTop="5dp"
            android:paddingBottom="8dp"
            android:textSize="15dp"
            android:background="@drawable/shape_line_color_edittext"
            android:paddingRight="40dp"/>

        <ImageView
            android:id="@+id/Im_phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:tint="@color/gray"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_email_black_24dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/liner2"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner1">

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:gravity="right"
            android:textSize="15dp"
            android:paddingTop="5dp"
            android:fontFamily="@font/vazir_medium"
            android:paddingBottom="8dp"
            android:background="@drawable/shape_line_color_edittext"
            android:inputType="textPassword"
            android:paddingRight="40dp"/>

        <ImageView
            android:id="@+id/Im_password"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="30dp"
            android:padding="5dp"
            android:tint="@color/gray"
            android:layout_marginBottom="3dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_https_black_24dp" />


    </RelativeLayout>


    <RelativeLayout
        android:layoutDirection="rtl"
        android:id="@+id/liner3"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fitsSystemWindows="true"
        android:layout_below="@+id/liner2">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/checkbox"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/showpassword" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner3"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:textAlignment="center"
        android:fontFamily="@font/vazir_medium"
        android:textSize="16dp"
        android:background="@drawable/tv_color_change_border"
        android:text="@string/forget_password"
        android:layout_marginTop="15dp"/>



    <TextView
        android:id="@+id/tv_register"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_forget_password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:textColor="#27AE60"
        android:fontFamily="@font/vazir_medium"
        android:textSize="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_line_color_edittext"
        android:text="@string/register"
        android:layout_marginTop="20dp"/>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/card_login"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/standard_elevation"
        android:layout_height="50dp"
        tools:targetApi="lollipop">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="@dimen/txt_size_title_activity_show"
            android:textColor="@color/white"
            android:fontFamily="@font/vazir_medium" />
    </android.support.v7.widget.CardView>








</RelativeLayout>