<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light_for_bg_activity"
    android:layoutDirection="rtl"
    tools:context=".Activities.ForgetPassActivity">
    <include layout="@layout/toolbar_second"
        android:id="@+id/toolbar_second_id"/>

    <LinearLayout
        android:layout_below="@id/toolbar_second_id"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:fontFamily="@font/vazir_medium"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_size_title_activity_show"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="10dp"
            android:layout_marginStart="20dp"
            android:gravity="start"
            android:id="@+id/ed_email_forget"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:drawableTint="@color/gray"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            tools:targetApi="m" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/please_enter_email"
            android:gravity="center"
            android:fontFamily="@font/vazir_medium"
            android:id="@+id/txt_register"
            android:textStyle="bold"
            android:textSize="@dimen/txt_size_title_activity_show"
            android:textColor="@color/gray"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:id="@+id/card_forget"
        android:elevation="@dimen/standard_elevation"
        android:layout_height="50dp"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cyan"
            android:gravity="center_vertical"
            android:fontFamily="@font/vazir_medium"
            android:text="@string/recovery_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </android.support.v7.widget.CardView>

</RelativeLayout>