<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_light_for_bg_activity"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context=".Activities.EditInformation">
    <include layout="@layout/toolbar_second"/>

        <EditText
            android:padding="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="@dimen/text_size_very_small"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fontFamily="@font/vazir_medium"
            android:background="@drawable/selector_default_edittext"
            android:id="@+id/ed_edit_name"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="30"
            android:hint="@string/name"/>

        <EditText
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/text_size_very_small"
            android:inputType="text"
            android:maxLines="1"
            android:background="@drawable/selector_default_edittext"
            android:fontFamily="@font/vazir_medium"
            android:id="@+id/ed_edit_family"
            android:maxLength="40"
            android:hint="@string/family"/>


<!--        <EditText-->
<!--            android:padding="8dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:textSize="@dimen/text_size_very_small"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="match_parent"-->
<!--            android:maxLines="1"-->
<!--            android:gravity="right"-->
<!--            android:maxLength="10"-->
<!--            android:background="@drawable/selector_default_edittext"-->
<!--            android:fontFamily="@font/vazir_medium"-->
<!--            android:id="@+id/ed_edit_postalcode"-->
<!--            android:inputType="numberDecimal"-->
<!--            android:hint="کد پستی" />-->


<!--        <EditText-->
<!--            android:padding="8dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="30dp"-->
<!--            android:layout_marginLeft="30dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="match_parent"-->
<!--            android:textSize="@dimen/text_size_very_small"-->
<!--            android:inputType="textMultiLine"-->
<!--            android:id="@+id/ed_edit_address"-->
<!--            android:background="@drawable/selector_default_edittext"-->
<!--            android:maxLength="500"-->
<!--            android:fontFamily="@font/vazir_medium"-->
<!--            android:maxLines="5"-->
<!--            android:lines="5"-->
<!--            android:hint="@string/address"-->
<!--            />-->

        <Button
            android:layout_width="200dp"
            android:id="@+id/btn_edit_edit_activity"
            android:foreground="?attr/selectableItemBackground"
            android:layout_height="wrap_content"
            android:text="@string/edit_information"
            android:fontFamily="@font/vazir_medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/white"
            android:background="@drawable/shape_btn_edit_profile"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/myaddress"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_big"
        android:layout_marginTop="48dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/tv_no_address"
        android:visibility="gone"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/text_size_big"
        android:text="هنوز آدرسی وجود ندارد"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:id="@+id/recycler_address"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="200dp"
        android:id="@+id/btn_add_address"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:text="@string/addaddress"
        android:fontFamily="@font/vazir_medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/text_size_big"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_edit_profile"/>


</LinearLayout>